--- a/sass/profile.scss
+++ b/sass/profile.scss
@@ -25,7 +25,7 @@
 
 		.profile__user {
 			text-align: center;
-			margin-bottom: 1rem;
+			margin-bottom: 1.5rem;
 			.profile__user--info {
 				span {
 					color: $primary-desaturated-blue-800;
@@ -35,6 +35,7 @@
 			}
 
 			.profile__user--city {
+				margin-top: 0.5rem;
 				font-size: 1rem;
 			}
 		}
